adding links to modals

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -21,19 +21,19 @@
                             <ul class="list-inline item-details">
                                 {% if post.client %}
                                     <li>Client:
-                                        <strong><{{ post.client }}
+                                         <strong><a href="www.ccaspar.com">{{ post.client }}</a>
                                         </strong>
                                     </li>
                                 {% endif %}
                                 {% if post.project-date %}
                                     <li>Date:
-                                        <strong><{{ post.project-date }}
+                                        <strong><a href="www.ccaspar.com">{{ post.project-date }}</a>
                                         </strong>
                                     </li>
                                 {% endif %}
                                 {% if post.category %}
                                     <li>Service:
-                                        <strong>{{ post.category }}
+                                        <strong><a href="www.ccaspar.com">{{ post.category }}</a>
                                         </strong>
                                     </li>
                                 {% endif %}
