--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,28 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p><b>Me at work</b><br>I am an experienced data scientist working at Essence Global. At Essence, I wear a number of hats while working for our client Google. I primarily lead research on brand oriented media, running A/B tests with the goal of raising high funnel metrics like awareness, perception, and consideration for Google products. As part of this research I also seek to bring in new data sources so I setup and oversee ETL pipelines as well. Lastly, in my spare time at Essence I seek ways to quantify the power of a creative advertisement. That side project has now become a fully operational client funded machine learning tool that identifies what aspects of videos drive brand lift. I'm proud of what it has become!
+                    <p><b>At work</b><br>I am an experienced data scientist currently doing consulting work.I have significant
+                        experience in product oriented work as well as marketing optimization. As a product oriented data scientist,
+                        I have built and models that scale lined of business and drive efficiency. As a marketing data
+                        scientist, I have done extensive research in brand optimization, test design and execution, and
+                        top of funnel strategies. My experience has touched on all parts of the data science process -
+                        here is a sample of the steps I typically follow in developing and deploying a solution:<br>
+                        brainstorming and ideation, data acquisition, exploratory data analysis, model development
+                        and optimization, deployment in CI/CD environments, test design and execution, dashboarding and
+                        reporting, automation of ETL pipeline, automation of model retraining pipelines, automation of
+                        model redeployment, and model monitoring. I am results driven and believe in constant communication
+                        with stakeholders to align on outcomes and maximize investment.<br>
+                        I am open to both consulting and full time roles!
                 </div>
                 <div class="col-lg-4">
-                    <p><b>Me at home</b><br>I am passionate about the environment and love the outdoors. In normal times you can find me skiing, swimming, or hiking depending on the season. In current times you can find me in my apartment watering my plants and watching soccer. I am a guitar player and enjoy supporting the local music scene. In my spare time, data science allows me to combine my analytical mindset with my interest in programming and machine learning. Take a look at my <a href="https://github.com/ccaspar/" style="color:blue"> github </a> to see some of my work!</p>
+                    <p><b>At home</b><br>I am passionate about the environment and love the outdoors. On weekends you can
+                        find me skiing, swimming, or hiking depending on the season. When I'm not outside you'll find me
+                        watering my plants and watching soccer. I am a guitar player and enjoy supporting the
+                        local music scene. Lastly, I studied the French language during my school years and love
+                        the French culture! I'm alwasy in search of a good croissant. In my spare time, data science
+                        allows me to combine my analytical mindset and machine learning skills with hobbies and projects at home.
+                        <br>
+                        Take a look at my <a href="https://github.com/ccaspar/" style="color:blue"> github </a> to see some of my work!</p>
                 </div>
             </div>
         </div>
