--- a/_includes/about.html
+++ b/_includes/about.html
@@ -27,7 +27,7 @@
                         find me skiing, swimming, or hiking depending on the season. When I'm not outside you'll find me
                         watering my plants and watching soccer. I am a guitar player and enjoy supporting the
                         local music scene. Lastly, I studied the French language during my school years and love
-                        the French culture! I'm alwasy in search of a good croissant. In my spare time, data science
+                        the French culture! I'm always in search of a good croissant. In my spare time, data science
                         allows me to combine my analytical mindset and machine learning skills with hobbies and projects at home.
                         <br>
                         Take a look at my <a href="https://github.com/ccaspar/" style="color:blue"> github </a> to see some of my work!</p>
